--- a/styles/css/modules/variables.css
+++ b/styles/css/modules/variables.css
@@ -1,6 +1,6 @@
 :root {
   scroll-behavior: smooth;
-  --primary-theme-color: #20232a;
+  --primary-theme-color: #2c3333;
   --secondary-theme-color: #282c34;
   --primary-text-color: #fff;
   --secondary-text-color: #eee;
