--- a/styles/css/modules/header.css
+++ b/styles/css/modules/header.css
@@ -40,7 +40,7 @@
 
 .cover h1{
     max-width: 400px;
-    font-size: 60px;
+    font-size: 50px;
     font-weight: 900;
     color: rgb(12, 239, 232);
 }
@@ -88,8 +88,8 @@
     position: absolute;
     bottom: 10px;
     right: 50px;
-    left: -600px;
-    width: 900px;
+    /*left: -600px;*/
+    width: 600px;
     animation: move_vector 6s ease-in-out infinite;
     transition: all 300ms;
 }
