--- a/styles/css/modules/variables.css
+++ b/styles/css/modules/variables.css
@@ -1,17 +1,17 @@
 :root {
   scroll-behavior: smooth;
-  --primary-theme-color: #2c3333;
-  --secondary-theme-color: #282c34;
+  --primary-theme-color:#f5f2e7;
+  --secondary-theme-color: #2666cf;
   --primary-text-color: #fff;
   --secondary-text-color: #eee;
   --reverse-primary-text-color: #000;
-  --primary-invalid-color: crimson;
+  /*--primary-invalid-color: rgb(20, 220, 67);*/
   --primary-shadow-color: #20232a80;
   --secondary-shadow-color: #282c3480;
   --tertiary-shadow-color: #00000040;
   --reverse-primary-shadow-color: #fff8;
   --primary-highlight-color: #61dafb;
-  --secondary-highlight-color: gold;
+  --secondary-highlight-color: rgb(210, 14, 14);
   --primary-button-color: #61dafb;
   --secondary-button-color: gold;
   --primary-font-family: 'Inconsolata', monospace;
