--- a/styles/css/modules/variables.css
+++ b/styles/css/modules/variables.css
@@ -10,7 +10,7 @@
   --secondary-shadow-color: #282c3480;
   --tertiary-shadow-color: #00000040;
   --reverse-primary-shadow-color: #fff8;
-  --primary-highlight-color: #61dafb;
+  --primary-highlight-color: #8a61fb;
   --secondary-highlight-color: rgb(210, 14, 14);
   --primary-button-color: #61dafb;
   --secondary-button-color: gold;
