--- a/styles/css/modules/header.css
+++ b/styles/css/modules/header.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 *{
@@ -14,7 +13,6 @@
 .cover{
     width: 100%;
     padding-bottom: 60px;
-    font-family: 'Poppins', sans-serif;
     margin-top: 100px;
 }
 
@@ -38,18 +36,16 @@
     z-index: 2;
 }
 
-.cover h1{
-    max-width: 400px;
-    font-size: 50px;
-    font-weight: 900;
-    color:#2c3333;
-}
-
-.cover h2{
+.cover__title {
     font-size: 50px;
     font-weight: 900;
     color:#2666cf;
     margin-top: -30px;
+    text-transform: uppercase;
+}
+
+.cover__title--tech{
+    color:#2c3333;
 }
 
 .cover p{
