--- a/styles/css/modules/variables.css
+++ b/styles/css/modules/variables.css
@@ -8,7 +8,7 @@
   /*--primary-invalid-color: rgb(20, 220, 67);*/
   --primary-shadow-color: #20232a80;
   --secondary-shadow-color: #282c3480;
-  --tertiary-shadow-color: #2C3333;
+  --tertiary-shadow-color: #00000040;
   --reverse-primary-shadow-color: #fff8;
   --primary-highlight-color: #2666CF;
   --secondary-highlight-color: rgb(210, 14, 14);
